refactor: add css to artist component

--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -1,8 +1,25 @@
-<p>{{ artist?.name }}</p>
-<img class="artistImage" src="{{ artist?.imageUrl }}"/>
-<ul>
-  <li *ngFor="let socialMedia of artist?.socialsMedia">
-    <img class="socialMediaIcon" src="{{ socialMedia.socialMedia.iconUrl }}">
-    <a href="{{ socialMedia.url }}" target="_blank">{{ socialMedia.nameId }}</a>
-  </li>
-</ul>
+<div class="artistMenuLeft">
+  <div>
+    <div class="artistImageDiv">
+      <img class="artistImage" src="{{ artist?.imageUrl }}"/>
+    </div>
+    <div class="artistName">
+      <p>{{ artist?.name }}</p>
+    </div>
+    <div>
+      <!-- contact -->
+    </div>
+  </div>
+
+  <div>
+    <ul>
+      <li *ngFor="let socialMedia of artist?.socialsMedia">
+        <img class="socialMediaIcon" src="{{ socialMedia.socialMedia.iconUrl }}">
+        <a class="socialMediaLink" href="{{ socialMedia.url }}" target="_blank">{{ socialMedia.nameId }}</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
+
