--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -1,9 +1,42 @@
-.socialMediaIcon{
-  width: 15px;
+.socialMediaIcon {
+  width: 20px;
   border-radius: 50%;
 }
 
-.artistImage{
-  width: 100px;
+.artistImage {
+  width: 200px;
   border-radius: 50%;
+}
+
+.artistImageDiv {
+  text-align: center;
+}
+
+.artistMenuLeft {
+  padding: 20px;
+  width: 250px;
+  background-color: aqua;
+  font-family: sans-serif;
+}
+
+.artistName {
+  text-align: center;
+  font-size: 25px;
+}
+
+li {
+  padding-bottom: 15px;
+  list-style: none;
+}
+
+.socialMediaLink {
+  padding-left: 10px;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
 }
