build: fix dockerfile

--- a/src/app/artist/artist.component.css
+++ b/src/app/artist/artist.component.css
@@ -15,7 +15,7 @@
 .artistMenuLeft {
   padding: 20px;
   width: 250px;
-  background-color: aqua;
+  /*background-color: aqua;*/
   font-family: sans-serif;
 }
 
