--- a/src/app/artist/artist.component.html
+++ b/src/app/artist/artist.component.html
@@ -13,7 +13,7 @@
 
   <div>
     <ul>
-      <li *ngFor="let socialMedia of artist?.socialsMedia">
+      <li *ngFor="let socialMedia of artist?.socialsMedia" class="socialMediaItem">
         <img class="socialMediaIcon" src="{{ socialMedia.socialMedia.iconUrl }}">
         <a class="socialMediaLink" href="{{ socialMedia.url }}" target="_blank">{{ socialMedia.nameId }}</a>
       </li>
